--- a/spring-cloud-oauth/springcloud-zuul-getway/pom.xml
+++ b/spring-cloud-oauth/springcloud-zuul-getway/pom.xml
@@ -50,6 +50,12 @@
 			<artifactId>springcloud-base-oauth</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 			<scope>compile</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework.security.oauth</groupId>
+					<artifactId>spring-security-oauth2</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 	</dependencies>
 
