--- a/spring-cloud-oauth/springcloud-zuul-getway/src/main/resources/application.yml
+++ b/spring-cloud-oauth/springcloud-zuul-getway/src/main/resources/application.yml
@@ -66,7 +66,7 @@ eureka:
       defaultZone: http://${APPLICATION_IP}:8888/eureka/
 spring:
   session:
-    store-type: redis
+    store-type: none
   redis:
     host: ${REDIS_HOST}
     port: 6379
